@@ -1,10 +1,16 @@
 import com.sun.nio.file.ExtendedOpenOption;
+
+import java.nio.ByteBuffer;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.RecursiveTask;
+
+import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
+
+import static java.nio.file.StandardOpenOption.READ;
 
 @Slf4j
 public class IpReader extends RecursiveTask<List<String>> {
@@ -15,31 +21,28 @@ public class IpReader extends RecursiveTask<List<String>> {
     private final static long THRESHOLD = 10_000_000L;
     private final static String delimiter = System.lineSeparator();
 
-    public IpReader (Path file, int start, int end) {
+    private final static long seekBufferSize = ("255.255.255.255" + delimiter + "255.255.255.255").getBytes().length;
+
+    public IpReader(Path file, int start, int end) {
         this.file = file;
         this.start = start;
         this.end = end;
     }
 
     @Override
-    protected List<String> compute () {
+    protected List<String> compute() {
         int size = end - start + 1;
         if ((end - start + 1) < THRESHOLD) {
-            return Arrays.asList(new String(readBytes(file, start, end)).split(delimiter));
-
+            return Arrays.asList(new String(readBytes(file, start, end).array()).split(delimiter));
         }
 
-        int middle = size / 2;
-        int testBufferSize = Math.min(4096, size);
-        int testBufferStart = middle - testBufferSize / 2;
-        int testBufferEnd = middle + testBufferSize / 2;
-
-        int posDelimiter = (new String(readBytes(file, testBufferStart, testBufferEnd))).indexOf(delimiter);
-        if (posDelimiter == -1) {
-            return List.of();
+        ByteBuffer buffer = readBytes(file, start, end);
+        long delimiterPosition = findDelimiterPosition();
+        if (delimiterPosition<0) {
+            return Arrays.asList(new String(buffer.array()).split(delimiter));
         } else {
-            var leftTask = new IpReader(file, start, testBufferStart + posDelimiter);
-            var rightTask = new IpReader(file, testBufferStart + posDelimiter, end);
+            var leftTask = new IpReader(file, start, delimiterPosition);
+            var rightTask = new IpReader(file, delimiterPosition+1, end);
             leftTask.fork();
             var rightResult = rightTask.compute();
             var leftResult = leftTask.join();
@@ -48,16 +51,45 @@ public class IpReader extends RecursiveTask<List<String>> {
         }
     }
 
-    private byte[] readBytes (Path path, int start, int end) {
-        int size = end - start + 1;
-        int bufferSize = (size / 4096 + 1) * 4096;
-        try (var inputStream = Files.newInputStream(file, ExtendedOpenOption.DIRECT)) {
-            byte[] buffer = new byte[bufferSize];
-            inputStream.readNBytes(buffer, start, bufferSize);
+    @SneakyThrows
+    private ByteBuffer readBytes(Path path, long start, long end) {
+        long size = end - start + 1;
+
+        try (var byteChannel = Files.newByteChannel(path, READ)) {
+            byteChannel.position(start);
+            var buffer = ByteBuffer.allocate((int) size);
+            byteChannel.read(buffer);
             return buffer;
         } catch (Exception e) {
             log.error(getClass().getSimpleName(), e);
-            return new byte[0];
+            return null;
         }
+//
+//        int size = end - start + 1;
+//        int bufferSize = (size / 4096 + 1) * 4096;
+//        try (var inputStream = Files.newInputStream(file, ExtendedOpenOption.DIRECT)) {
+//            byte[] buffer = new byte[bufferSize];
+//            inputStream.readNBytes(buffer, start, bufferSize);
+//            return buffer;
+//        } catch (Exception e) {
+//            log.error(getClass().getSimpleName(), e);
+//            return new byte[0];
+//        }
+    }
+
+    private long findDelimiterPosition(ByteBuffer buffer) {
+        long bufferSize = buffer.capacity();
+        long middle = bufferSize / 2;
+        long testBufferSize = Math.min(seekBufferSize, bufferSize);
+        long testBufferStart = middle - testBufferSize / 2;
+        long testBufferEnd = middle + testBufferSize / 2;
+        long seekBufferSize = testBufferEnd - testBufferSize + 1;
+        byte[] seekBuffer = new byte[(int) seekBufferSize];
+        buffer.get(seekBuffer, (int) testBufferStart, (int) seekBufferSize);
+        int delimiterPosition = (new String(seekBuffer)).indexOf(delimiter);
+        if (delimiterPosition >= 0) {
+            delimiterPosition += testBufferStart;
+        }
+        return delimiterPosition;
     }
 }
